--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -1,14 +1,26 @@
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
 .related,
 .outfit {
   position: relative;
   overflow: hidden;
-  padding: 20px;
+  width: 1500px;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
 }
 
 .section-title {
   padding: 0 10vw;
   font-size: 20px;
   margin-bottom: 20px;
+  width: 1500px;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   text-transform: uppercase;
 }
 
@@ -24,6 +36,38 @@
   display: none;
 }
 
+.pre-button,
+.next-button {
+  border: none;
+  width: 10vw;
+  height: 100%;
+  padding: 20px;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, #fff 100%);
+  cursor: pointer;
+  z-index: 9;
+  font-size: 1.3rem;
+  opacity: 0.5;
+}
+
+.pre-button {
+  left: 0;
+  transform: rotate(180deg);
+}
+
+.next-button {
+  right: 0;
+}
+
+.pre-button:hover,
+.next-button:hover {
+  opacity: 1;
+}
+
 .card {
   flex: 0 0 auto;
   width: 250px;
@@ -35,7 +79,7 @@
 .card-img {
   position: relative;
   width: 100%;
-  height: 280px;
+  height: 70%;
   overflow: hidden;
 }
 
@@ -45,7 +89,7 @@
   object-fit: cover;
 }
 
-.card-compare {
+.card-compare-btn {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -62,11 +106,11 @@
   color: white;
 }
 
-.card-img:hover .card-compare {
+.card-img:hover .card-compare-btn {
   opacity: 1;
 }
 
-.card-compare:hover {
+.card-compare-btn:hover {
   color: yellow;
 }
 
@@ -78,19 +122,57 @@
 .card-category {
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  margin: 8px;
+  margin: 5px;
+  font-size: 13px;
 }
 
 .card-name {
-  width: 100%;
   height: 40px;
   line-height: 20px;
   overflow: hidden;
   font-weight: bold;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: 8px;
+  margin: 5px;
+  font-size: 18px;
 }
 
 .star-rating {
   padding: 0;
+  margin: 5px;
 }
+
+.current-price {
+  font-size: 1rem;
+  color: black;
+  margin: 5px;
+}
+
+.sale-price {
+  font-size: 1rem;
+  color: red;
+  margin: 5px;
+}
+
+.original-price {
+  font-size: 0.75rem;
+  text-decoration: line-through;
+  color: black;
+  margin: 5px;
+}
+
+.card-compare-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 500px;
+  max-width: 80%;
+  height: 400px;
+  max-height: 80%;
+  z-index: 10;
+  background-color: white;
+  overflow-y: scroll;
+}
+
