--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -192,3 +192,11 @@
   font-size: 90px;
   font-weight: bold;
 }
+.star:hover{
+  margin: 5px;
+  /* font-size: 90px;
+  font-weight: bold; */
+  /* background-color: red; */
+  padding: 10px;
+  color: green;
+}
