complete starRating component

--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -269,3 +269,29 @@
   font-size: 90px;
   font-weight: bold;
 }
+
+.single-star-outline {
+  height: 18px;
+  width: 18px;
+}
+
+.single-star-fill {
+  position: relative;
+  display: inline-block;
+  height: 18px;
+  background-color: black;
+}
+
+.single-star-container {
+  height: 18px;
+  width: 18px;
+  display: inline-block;
+}
+
+.card-price {
+  margin: 5px;
+}
+
+.star-rating {
+  margin: 5px;
+}
