--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -500,7 +500,6 @@ Reviews */
   border: none;
   outline: none;
   position: relative;
-
 }
 
 
@@ -511,3 +510,86 @@ Reviews */
   position: relative;
   z-index: 2;
 }
+
+
+/* ================================ QnA */
+
+.buttonLink {
+  background: none!important;
+  border: none;
+  padding: 0!important;
+  /*optional*/
+  font-family: Arial, Helvetica, sans-serif;
+  /*input has OS specific font-family*/
+  color: #069;
+  text-decoration: underline;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.QnA {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 10%;
+}
+
+.QS, .QSOpts {
+  display: inline;
+}
+
+.QSOpts {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.qsModal {
+  overflow-y: scroll;
+  border: 1px solid black;
+  width: 70%;
+  margin: 0 auto;
+  border-bottom: gray solid;
+}
+
+.QSList {
+  height: 150px;
+}
+
+.ansList {
+  overflow-y: scroll;
+  height: 75px;
+}
+
+.ans {
+  overflow-y: scroll;
+  margin-bottom: 10px;
+  border-bottom: dashed gray;
+}
+#searchBox {
+  margin-bottom: 5px;
+  padding: 20px 10px;
+}
+
+input {
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
+.QSboxbotbut{
+  margin-right: 20px;
+}
+
+.lvl4 {
+  font-size: 12px;
+}
+
+.lvl3 {
+  font-size: 18px;
+}
+
+.lvl2 {
+  font-size: 22px;
+}
+
+.lvl1 {
+  font-size: 26px;
+}
+
