--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -6,31 +6,26 @@
 .outfit {
   position: relative;
   overflow: hidden;
-  width: 1500px;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  display: flex;
   justify-content: center;
 }
 
 .section-title {
-  padding: 0 10vw;
-  font-size: 20px;
-  margin-bottom: 20px;
-  width: 1500px;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
+  top: 0;
+  padding: 0 10%;
+  font-size: 2vw;
+  margin-bottom: 2vw;
+  width: 100%;
+  justify-content: center;
   text-transform: uppercase;
 }
 
 .outfit-list,
 .related-products {
-  padding: 0 10vw;
+  width: 80%;
   display: flex;
-  overflow-x: auto;
-  overflow-y: hidden;
-  scroll-behavior: smooth;
+  transition: transform 250ms ease-in-out
 }
 
 .outfit-list::-webkit-scrollbar,
@@ -41,18 +36,16 @@
 .pre-button,
 .next-button {
   border: none;
-  width: 10vw;
-  height: 100%;
-  padding: 20px;
   position: absolute;
-  top: 0;
+  width: 10%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(90deg, rgba(255,255,255,0) 0%, #fff 100%);
   cursor: pointer;
   z-index: 9;
-  font-size: 1.3rem;
+  font-size: 2vw;
   opacity: 0.5;
 }
 
@@ -68,13 +61,14 @@
 .pre-button:hover,
 .next-button:hover {
   opacity: 1;
+  font-size: 4vw;
 }
 
 .card {
-  flex: 0 0 auto;
-  width: 250px;
-  height: 400px;
-  margin-right: 40px;
+  flex: 0 0 24%;
+  max-width: 24%;
+  aspect-ratio: 5 / 8;
+  margin: .5%;
   border: 1px solid black;
 }
 
@@ -82,7 +76,6 @@
   position: relative;
   width: 100%;
   height: 70%;
-  overflow: hidden;
 }
 
 .card-current-img {
@@ -93,9 +86,9 @@
 
 .card-function-btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 2px;
+  top: 3%;
+  right: 5%;
+  padding: .25vw;
   width: 14%;
   height: 10%;
   background: none;
@@ -104,7 +97,7 @@
   opacity: 0;
   border: none;
   outline: none;
-  font-size: 1.5rem;
+  font-size: 2vw;
   color: white;
 }
 
@@ -139,11 +132,10 @@
   background-color: white;
   width: 800px;
   max-width: 60%;
-  padding: 10px 0;
+  padding: 1vw 0;
 }
 
 .compare-title,
-.compare-name,
 .compare-features {
   position: relative;
   top: 0;
@@ -152,11 +144,8 @@
 }
 
 .compare-title {
-  text-align: center;
-}
-
-.compare-name {
-  height: 40px;
+  text-align: left;
+  padding-left: 3vw;
 }
 
 .compare-features {
@@ -166,76 +155,61 @@
 .compare-roll {
   position: relative;
   width: 100%;
-  height: 20px;
 }
 
 .compare-current {
-  position: absolute;
-  left: 0;
-  width: 300px;
   text-align: left;
-  padding: 0 10px;
 }
 
 .feature-name {
-  position: absolute;
-  left: 300px;
-  padding: 0 10px;
-  width: 200px;
   text-align: center;
 }
 
 .compare-compare {
-  position: absolute;
-  right: 0;
-  width: 300px;
   text-align: right;
-  padding: 0 10px;
 }
 
 .card-info {
   width: 100%;
-  height: 100%;
+  height: 30%;
 }
 
 .card-category {
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  margin: 5px;
-  font-size: 13px;
+  margin: .5vw;
+  font-size: 1vw;
 }
 
 .card-name {
-  height: 40px;
-  line-height: 20px;
-  overflow: hidden;
   font-weight: bold;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: 5px;
-  font-size: 18px;
+  margin: .5vw;
+  font-size: 1.2vw;
+  height: 2.5vw;
 }
 
 .current-price {
-  font-size: 1rem;
+  font-size: 1vw;
   color: black;
-  margin: 5px;
+  margin: .5vw;
 }
 
 .sale-price {
-  font-size: 1rem;
+  font-size: 1vw;
   color: red;
-  margin: 5px;
+  margin: .5vw;
 }
 
 .original-price {
-  font-size: 0.75rem;
+  font-size: 1vw;
   text-decoration: line-through;
   color: black;
-  margin: 5px;
+  margin: .5vw;
 }
 
 .add-outfit-sign {
-  font-size: 10rem;
+  font-size: 12vw;
   font-weight: bold;
   text-align: center;
   width: 100%;
@@ -244,7 +218,7 @@
 }
 
 .add-outfit-word {
-  font-size: 1.5rem;
+  font-size: 2vw;
   text-align: center;
   width: 100%;
   height: 20%;
@@ -258,7 +232,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border: 1px solid black;
-  border-radius: 10px;
   width: 500px;
   max-width: 80%;
   height: 400px;
@@ -269,29 +242,26 @@
 }
 
 .single-star-outline {
-  height: 18px;
-  width: 18px;
+  height: 2vw;
+  width: 2vw;
 }
 
 .single-star-fill {
   position: relative;
   display: inline-block;
-  height: 18px;
+  height: 2vw;
   background-color: black;
 }
 
 .single-star-container {
-  height: 18px;
-  width: 18px;
+  height: 2vw;
+  width: 2vw;
   display: inline-block;
 }
 
+.star-rating,
 .card-price {
-  margin: 5px;
-}
-
-.star-rating {
-  margin: 5px;
+  margin: .5vw;
 }
 
 /* ================================
