--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -2,21 +2,26 @@
   box-sizing: border-box;
 }
 
+/* ================================
+Related Product */
+
 .related,
 .outfit {
   position: relative;
   overflow: hidden;
   display: flex;
   justify-content: center;
+  max-width: 80%;
+  margin: auto;
 }
 
 .section-title {
   position: relative;
   top: 0;
-  padding: 0 10%;
+  padding: 0 8%;
   font-size: 2vw;
-  margin-bottom: 2vw;
-  width: 100%;
+  margin: 2vw auto;
+  width: 80%;
   justify-content: center;
   text-transform: uppercase;
 }
@@ -46,7 +51,6 @@
   cursor: pointer;
   z-index: 9;
   font-size: 2vw;
-  opacity: 0.5;
 }
 
 .pre-button {
@@ -60,7 +64,6 @@
 
 .pre-button:hover,
 .next-button:hover {
-  opacity: 1;
   font-size: 4vw;
 }
 
@@ -177,53 +180,75 @@
 .card-category {
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  margin: .5vw;
+  margin: 2%;
   font-size: 1vw;
+  height: 14%;
 }
 
 .card-name {
   font-weight: bold;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: .5vw;
-  font-size: 1.2vw;
-  height: 2.5vw;
+  margin: 2%;
+  font-size: 1.25vw;
+  height: 36%;
+}
+
+.card-price {
+  margin: 2%;
+  height: 14%;
 }
 
 .current-price {
   font-size: 1vw;
   color: black;
-  margin: .5vw;
+  margin: 0 2%;
 }
 
 .sale-price {
   font-size: 1vw;
   color: red;
-  margin: .5vw;
+  margin: 0 2%;
 }
 
 .original-price {
   font-size: 1vw;
   text-decoration: line-through;
   color: black;
-  margin: .5vw;
+  margin: 0 2%;
+}
+
+.star-rating {
+  margin: 2%;
+  height: 18%;
+}
+
+.single-star-container {
+  height: 100%;
+  aspect-ratio: 1 / 1;
+  display: inline-block;
+}
+
+.single-star-outline {
+  height: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.single-star-fill {
+  height: 100%;
+  background-color: black;
+  object-fit: cover;
+  display: flex;
 }
 
 .add-outfit-sign {
   font-size: 12vw;
   font-weight: bold;
   text-align: center;
-  width: 100%;
-  height: 80%;
-  padding: 25%;
 }
 
 .add-outfit-word {
   font-size: 2vw;
   text-align: center;
-  width: 100%;
-  height: 20%;
-  overflow: hidden;
-  padding: 10%
 }
 
 .card-compare-modal {
@@ -241,28 +266,7 @@
   overflow-y: scroll;
 }
 
-.single-star-outline {
-  height: 2vw;
-  width: 2vw;
-}
 
-.single-star-fill {
-  position: relative;
-  display: inline-block;
-  height: 2vw;
-  background-color: black;
-}
-
-.single-star-container {
-  height: 2vw;
-  width: 2vw;
-  display: inline-block;
-}
-
-.star-rating,
-.card-price {
-  margin: .5vw;
-}
 
 /* ================================
 Reviews */
