add test & stars

--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -554,6 +554,42 @@ Reviews */
   height: 2vw;
 }
 
+.starinform{
+  height: 4vw;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 30%;
+  margin-right: auto;
+}
+input[type='radio'] {
+  display : none;
+}
+
+.star-rating_reviews {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.single-star-container_reviews {
+  height: 100%;
+  aspect-ratio: 8 / 9;
+  display: inline-block;
+}
+
+.single-star-outline_reviews {
+  height: 100%;
+  aspect-ratio: 8 / 9;
+}
+
+.single-star-fill_reviews {
+  height: 100%;
+  /* background-color: gold; */
+  object-fit: cover;
+  display: flex;
+  cursor: pointer;
+  transition: color 200ms;
+}
 /* ================================ QnA */
 
 .buttonLink {
