--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -455,6 +455,7 @@ Reviews */
   display:flex;
   flex-direction: column;
   margin-top: 20px;
+  margin-bottom: 30px;
 }
 .bar-text{
   font-size: 12px;
@@ -533,7 +534,7 @@ Reviews */
 .create {
   max-width: 400px;
   margin: 0 auto;
-  text-align: center;
+  /* text-align: left; */
 }
 
 .create label {
@@ -555,12 +556,12 @@ Reviews */
 }
 
 .starinform{
-  height: 4vw;
+  height: 2vw;
   margin-top: 20px;
-  margin-bottom: 10px;
-  margin-left: 30%;
+  margin-bottom: 30px;
   margin-right: auto;
 }
+
 input[type='radio'] {
   display : none;
 }
@@ -584,12 +585,26 @@ input[type='radio'] {
 
 .single-star-fill_reviews {
   height: 100%;
-  /* background-color: gold; */
   object-fit: cover;
   display: flex;
   cursor: pointer;
   transition: color 200ms;
 }
+
+.overall-rating-star{
+  display:flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+
+/* .charstarbreakdown{
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-start;
+} */
+
 /* ================================ QnA */
 
 .buttonLink {
