--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -730,7 +730,7 @@ input {
   /* border:3px solid;
   border-color: green; */
   width: auto;
-  height: 2000px;
+  height: auto;
 }
 .Overview-flexRowOne {
   display: flex;
@@ -740,8 +740,8 @@ input {
 .Overview-Left {
   order:1;
   width: 100%;
-  border: 3px solid;
-  border-color: blue;
+  /* border: 3px solid;
+  border-color: blue; */
   background-color: grey;
   overflow: hidden;
 }
@@ -757,8 +757,7 @@ input {
   display:block;
   /* position: absolute; */
   width: 100%;
-  height: 50%;
-  max-height: 800px;
+  height: auto;
   object-fit: contain;
   overflow: hidden;
   cursor: -moz-zoom-in;
@@ -801,12 +800,7 @@ a.left, a.right {
   margin-top: -22px;
   padding: 16px;
   color: white;
-  font-weight: bold;
   font-size: 25px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  z-index: 100;
 }
 
 /* Position the "next button" to the right */
@@ -822,17 +816,13 @@ a.left{
 a.up, a.down {
   cursor: pointer;
   position: absolute;
-  left: 7%;
-  width: auto;
+  left: 25%;
+  width: 100%;
   margin-top: -22px;
   padding: 16px;
   color: white;
   font-weight: bold;
   font-size: 25px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  z-index: 100;
 }
 
 /* Position the "next button" to the right */
@@ -857,6 +847,11 @@ a.down{
   border-color: red;
 }
 
+.Overview-star-rating {
+  height: 50%;
+  border: solid blue
+}
+
 .Overview-styleThumbnail {
   height: 100px;
   width: 100px;
@@ -870,8 +865,8 @@ a.down{
 .Overview-Bottom {
   width: auto;
   height: auto;
-  border: 3px solid #73AD21;
-  border-color: purple;
+  /* border: 3px solid #73AD21;
+  border-color: purple; */
 }
 
 .Overview-Description {
