--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -678,9 +678,8 @@ input[type="checkbox"].toggle:checked + label::before{
 .QnA {
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
-  justify-content: center;
+  left: 25%;
   margin: auto;
-  display: initial;
 }
 
 .QS, .QSOpts {
@@ -698,14 +697,14 @@ input[type="checkbox"].toggle:checked + label::before{
 
 .qsModal {
   border: 1px solid black;
-  width: 350px;
+  width: 300px;
   margin: 10px;
   border-bottom: gray solid;
   justify-content: center;
 }
 
 .ansModal {
-  width: 50%;
+  width: 70%;
   margin: 10px;
 }
 
@@ -762,9 +761,10 @@ input[type="checkbox"].toggle:checked + label::before{
   background-color: white;
 }
 
-input {
+input, textarea {
   margin-bottom: 5px;
   padding: 5px;
+  font-family: Arial
 }
 
 .QSboxbotbut{
