--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -815,7 +815,7 @@ input {
   width: 100%;
   /* border: 3px solid;
   border-color: blue; */
-  background-color: transparent;
+  background-color: grey;
   overflow: hidden;
 }
 
@@ -925,16 +925,26 @@ a.down{
   min-width: 30%;
   max-width: 30%;
   height: auto;
-  border: 3px solid #73AD21;
-  border-color: red;
 }
 
 .Overview-star-rating {
   height: 50%;
-  border: solid blue
 }
 
-.Overview-styleThumbnail {
+.selectedCheckmark {
+  position: absolute;
+  left: 60px;
+  top: -12px;
+  font-size: 45px;
+}
+
+.Overview-styleGroupOfFour {
+  position:relative;
+  display: flex;
+  flex-wrap: wrap;
+}
+.Overview-styleThumbnailImg {
+  border-radius: 100%;
   height: 100px;
   width: 100px;
   z-index: 150;
