--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -804,6 +804,8 @@ input {
   border-color: green; */
   width: auto;
   height: auto;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 .Overview-flexRowOne {
   display: flex;
