--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -714,7 +714,7 @@ input[type="checkbox"].toggle:checked + label::before{
 
 #QSList {
   overflow-Y: auto;
-  height: 300px;
+  max-height: 50;
   width: 1000px;
 }
 
