--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -298,8 +298,9 @@ Reviews */
 }
 .containerAll {
   background-color: white;
-  padding: 10px;
-  margin: 50px;
+  margin-top: 3vw;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
