--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -718,7 +718,7 @@ input[type="checkbox"].toggle:checked + label::before{
 
 #QSList {
   overflow-Y: auto;
-  max-height: 50%;
+  max-height: 50vmax;
   width: 1000px;
 }
 
