--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -835,8 +835,8 @@ input, textarea {
   width: 100%;
   height:100%;
   z-index:100;
-  max-height: 85%;
-  max-width: 85%;
+  max-height: 80%;
+  max-width: 100%;
   background-color: grey;
   overflow: hidden;
 }
@@ -962,9 +962,14 @@ a.down{
   max-width: 30%;
   height: auto;
 }
-
+h2.Overview-category {
+  font-size: 3vw;
+  margin: 0;
+  margin-top: 1.5vw;
+}
 .Overview-star-rating {
   height: 20px;
+  margin: 0;
 }
 
 .selectedCheckmark {
@@ -1006,7 +1011,7 @@ a.down{
 }
 
 .Overview-flexRowTwo {
-  padding-top: 50px;
+  padding-top: 5vw;
 }
 
 .Overview-Description {
