--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -819,19 +819,20 @@ input, textarea {
 .Overview-flexRowOne {
   display: flex;
   flex-direction: row;
-  column-gap: 50px;
+  column-gap: 2vw;
 
 }
 .Overview-LeftDefault {
   order:1;
   width: 100%;
-  /* border: 3px solid;
-  border-color: blue; */
+  height: 100%;
+  scale: .90;
   background-color: grey;
   overflow: hidden;
 }
 .Overview-LeftExpanded {
   position:absolute;
+  min-height: 800px;
   width: 100%;
   height:100%;
   z-index:100;
@@ -843,9 +844,7 @@ input, textarea {
 .Overview-LeftExpanded .Overview-mainImg {
   height: 100%;
   top: 25%;
-  max-height: 800px;
   display:block;
-  /* position: absolute; */
   width: 100%;
   object-fit: contain;
   overflow: hidden;
@@ -904,7 +903,7 @@ input, textarea {
 .Overview-galleryThumbnailSelected {
   border: solid;
   border-color: gold;
-  width: 100%;
+  width: 80%;
   height:30%;
 
 }
@@ -969,7 +968,7 @@ h2.Overview-category {
 }
 .Overview-star-rating {
   height: 20px;
-  margin: 0;
+  margin-top: 2vw;
 }
 
 .selectedCheckmark {
@@ -1006,12 +1005,11 @@ h2.Overview-category {
 .Overview-Bottom {
   width: auto;
   height: auto;
-  /* border: 3px solid #73AD21;
-  border-color: purple; */
+  z-index: 100;
 }
 
 .Overview-flexRowTwo {
-  padding-top: 5vw;
+  padding-top: 2vw;
 }
 
 .Overview-Description {
@@ -1024,8 +1022,13 @@ h2.Overview-category {
   flex-wrap: wrap;
   flex-direction: column;
   width: 50%;
+  font-weight: bold;
+}
+.Overview-descriptionOverview {
+  font-weight: initial;
 }
 
 .Overview-descriptionFeatures {
-  border-left: 3px solid black
+  padding-left: 10px;
+  border-left: 3px solid black;
 }
