--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -521,6 +521,7 @@ Reviews */
   display: flex;
   right:calc(-4% - var(--characteristics-bar));
   position: relative;
+  margin-right: 0;
   z-index: 2;
 }
 
