--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -8,6 +8,8 @@ h2 {
   margin: 3vw;
 }
 
+
+
 /* ================================
 Related Product */
 
@@ -19,6 +21,7 @@ Related Product */
   justify-content: center;
   max-width: 70%;
   margin: auto;
+  background-color: #222222;
 }
 
 .section-title {
