--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -21,7 +21,7 @@ Related Product */
   justify-content: center;
   max-width: 70%;
   margin: auto;
-  background-color: #222222;
+  background-color: #ffffff;
 }
 
 .section-title {
