--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -692,6 +692,10 @@ input[type="checkbox"].toggle:checked + label::before{
   margin: auto;
 }
 
+.QnAImages {
+  width: 50px;
+}
+
 .QS, .QSOpts {
   display: inline;
 }
