--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -817,8 +817,8 @@ input, textarea {
   position:relative;
   /* border:3px solid;
   border-color: green; */
-  width: auto;
-  height: auto;
+  width: 1513;
+  height: 850px;
   margin-left: 100px;
   margin-right: 100px;
 }
@@ -993,8 +993,9 @@ h2.Overview-category {
 }
 .Overview-styleThumbnailImg {
   border-radius: 100%;
-  height: 100px;
-  width: 100px;
+  height: 70px;
+  width: 70px;
+  object-fit: cover;
   z-index: 150;
 }
 .Overview-salePrice {
