--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -826,9 +826,10 @@ input, textarea {
 
 .Overview-main {
   position:relative;
+  display: inline-block;
   /* border:3px solid;
   border-color: green; */
-  width: 1513;
+  width: 1513px;
   height: 850px;
   margin-left: 100px;
   margin-right: 100px;
@@ -849,7 +850,7 @@ input, textarea {
 }
 .Overview-LeftExpanded {
   position:absolute;
-  min-height: 800px;
+  height: 800px;
   width: 100%;
   height:100%;
   z-index:100;
@@ -880,6 +881,7 @@ input, textarea {
   height: 100%;
   width: 100%;
 
+
 }
 .Overview-mainImgDiv {
   height: 100%;
@@ -888,7 +890,7 @@ input, textarea {
 .Overview-mainImg {
   height: 100%;
   top: 25%;
-  max-height: 800px;
+  max-height: 700px;
   display:block;
   /* position: absolute; */
   width: 100%;
@@ -903,25 +905,27 @@ input, textarea {
 
 .Overview-galleryThumbnails {
   position: absolute;
+  display: flex;
+  flex-direction: column;
   top: 5%;
   left: 10%;
   width: 10%;
   max-height: 80%;
-  object-fit:contain;
 }
 
 .Overview-galleryThumbnail {
-  width: 95%;
-  height:95%;
-  max-height: 50px;
-  object-fit: contain;
+  width: 5vw;
+  height:4vw;
+  margin: auto;
 }
 
 .Overview-galleryThumbnailSelected {
   border: solid;
   border-color: gold;
-  width: 80%;
-  height:30%;
+  width: 5vw;
+  height:4vw;
+  object-fit: fill;
+  margin: auto;
 
 }
 
@@ -950,7 +954,7 @@ a.left{
 a.up, a.down {
   cursor: pointer;
   position: absolute;
-  left: 25%;
+  left: 13%;
   width: 100%;
   margin-top: -22px;
   padding: 16px;
@@ -961,12 +965,13 @@ a.up, a.down {
 
 /* Position the "next button" to the right */
 a.up{
+
   top: -5%;
   border-radius: 3px 0 0 3px;
 }
 
 a.down{
-  bottom: auto;
+  bottom: -15%;
   border-radius: 3px 0 0 3px;
 }
 
@@ -990,7 +995,7 @@ h2.Overview-category {
 
 .selectedCheckmark {
   position: absolute;
-  left: 45px;
+  left: 60px;
   top: -12px;
   font-size: 45px;
 }
